tests/fixtures/positive/naming/PackageNaming.kt
package com.Example.Bad

class PackageNamingExample {
    fun doWork() {}
}
