tests/fixtures/negative/empty-blocks/EmptyInitBlock.kt
package fixtures.negative.emptyblocks

class Foo {
    init {
        setup()
    }
}
